[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "druggen-rl"
version = "0.1.0"
description = "Reinforcement learning framework for de novo drug molecule generation via SMILES"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rajul Kabeer", email = "rajul.kabeer@gmail.com" }]
requires-python = ">=3.9"
keywords = ["drug-discovery", "reinforcement-learning", "molecular-generation", "smiles", "cheminformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "stable-baselines3[extra]>=2.0.0",
    "sb3-contrib>=2.0.0",
    "torch>=2.0.0",
    "gymnasium>=0.28.0",
    "rdkit-pypi",
    "guacamol",
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
druggen-train = "train_agent:main"
druggen-eval  = "evaluate_agent:main"

[project.urls]
Repository = "https://github.com/rajul-kk/Drug_Generation"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "envs*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
